--- a/src/Panama/Resources/Strings.resx
+++ b/src/Panama/Resources/Strings.resx
@@ -153,18 +153,6 @@
     <value>Save all modifications to data</value>
     <comment>Tooltip used for save command</comment>
   </data>
-  <data name="CommandAddPublisher" xml:space="preserve">
-    <value>Add publisher</value>
-    <comment>Command text for add publisher</comment>
-  </data>
-  <data name="CommandAddPublisherTooltip" xml:space="preserve">
-    <value>Add a new publisher to the list</value>
-    <comment>Tooltip text for add publisher</comment>
-  </data>
-  <data name="CommandAddTitle" xml:space="preserve">
-    <value>Add title</value>
-    <comment>Command text for add title</comment>
-  </data>
   <data name="CommandApplyConfig" xml:space="preserve">
     <value>Apply</value>
     <comment>Command text for config apply</comment>
@@ -181,16 +169,9 @@
     <value>Restore the changed application settings to their previous values</value>
     <comment>Tooltip used for config revert</comment>
   </data>
-  <data name="CommandAddSubmission" xml:space="preserve">
-    <value>Add submission</value>
-  </data>
   <data name="CommandSubmission" xml:space="preserve">
     <value>Submissions</value>
     <comment>Command text for submissions</comment>
-  </data>
-  <data name="CommandSubmissionTooltip" xml:space="preserve">
-    <value>Add, view and modify submission information</value>
-    <comment>Tooltip text used for submissions</comment>
   </data>
   <data name="CommandAddSubmissionTooltip" xml:space="preserve">
     <value>Create a new submission</value>
@@ -272,12 +253,9 @@ Please make sure that {1} is set correctly in configuration settings. File speci
     <value>This document type is obsolete and is no longer supported</value>
     <comment>Used when attempting to view obsolete Outlook direct reference in submission documents</comment>
   </data>
-  <data name="CommandCreateSubmission" xml:space="preserve">
+  <data name="MenuItemCreateSubmission" xml:space="preserve">
     <value>Create a submission to this publisher</value>
     <comment>Command text for create a submission</comment>
-  </data>
-  <data name="CommandAddTitleToSubmission" xml:space="preserve">
-    <value>Add this title to a submission</value>
   </data>
   <data name="CommandBrowseToPublisherUrlOrClick" xml:space="preserve">
     <value>Browse to this publisher's web site (or double click the row)</value>
@@ -848,7 +826,7 @@ Do you want to continue?</value>
   <data name="ToolTipTitleFilterReady" xml:space="preserve">
     <value>Title is flagged as ready</value>
   </data>
-  <data name="TooltipPublisherExclusive" xml:space="preserve">
+  <data name="ToolTipPublisherExclusive" xml:space="preserve">
     <value>Publisher wants an exclusive submission, i.e. does not accept simultaneous</value>
   </data>
   <data name="ConfirmationTitleSubmittedToExclusivePublisher" xml:space="preserve">
@@ -1021,5 +999,8 @@ Do you want to continue?</value>
   </data>
   <data name="ToolTipPublisherFollowup" xml:space="preserve">
     <value>Publisher is flagged for follow up</value>
+  </data>
+  <data name="MenuItemCreatePublisher" xml:space="preserve">
+    <value>Create a new publisher record</value>
   </data>
 </root>
