Implement publisher text filter
The publisher text filter enables the user to filter by the name of the publisher

--- a/src/Panama/Resources/Strings.resx
+++ b/src/Panama/Resources/Strings.resx
@@ -1014,4 +1014,7 @@ Do you want to continue?</value>
   <data name="TextTitle" xml:space="preserve">
     <value>Title</value>
   </data>
+  <data name="TextName" xml:space="preserve">
+    <value>Name</value>
+  </data>
 </root>
