--- a/src/Panama/Resources/Strings.resx
+++ b/src/Panama/Resources/Strings.resx
@@ -403,11 +403,11 @@ does not exist. Correct this by selecting the correct file and then try again.</
   <data name="ToolExportDetail" xml:space="preserve">
     <value>This operation exports all versions of each title to the specifed folder. Each file will be named in accordance with the date it was written, its title, language and version / revision. Only files that have changed or are not present in the export directory will be exported. Extra files in the export directory will be deleted.</value>
   </data>
-  <data name="ToolMetadataDetail" xml:space="preserve">
-    <value>This operation verfies that all files associated with title versions and submission documents are present on disk and updates meta data that is stored in the database regarding each file, such as last updated date/time and word count.</value>
+  <data name="ToolTitleMetadataDetail" xml:space="preserve">
+    <value>This operation verfies that all files associated with title versions are present on disk and updates meta data that is stored in the database regarding each file, such as last updated date/time and word count.</value>
   </data>
-  <data name="InvalidOpExportFolderNotSet" xml:space="preserve">
-    <value>The folder for the export operation hasn't been set or doesn't exist. Fix the configuration setting and try again.</value>
+  <data name="InvalidOpOutputFolderNotSet" xml:space="preserve">
+    <value>The folder for this operation hasn't been set or doesn't exist. Fix the configuration setting and try again.</value>
   </data>
   <data name="FormatTextExport" xml:space="preserve">
     <value>This folder contains exported versions of each title tracked by {0}.
@@ -507,9 +507,6 @@ Last exported: {1}</value>
   <data name="CommandToolExport" xml:space="preserve">
     <value>Export</value>
   </data>
-  <data name="CommandToolMeta" xml:space="preserve">
-    <value>Update</value>
-  </data>
   <data name="CommandToolOrphan" xml:space="preserve">
     <value>Find Orphans</value>
   </data>
@@ -547,7 +544,7 @@ Last exported: {1}</value>
     <value>Title list</value>
   </data>
   <data name="ToolTitleListDetail" xml:space="preserve">
-    <value>This operation creates a text file that has a list of all titles and their corresponding versions. The text file is placed in the TitleRoot folder.</value>
+    <value>This operation creates a text file that has a list of all titles and their corresponding versions.</value>
   </data>
   <data name="TooltipTitleWordCount" xml:space="preserve">
     <value>Word count - the number of words in the latest version of this title</value>
@@ -1033,8 +1030,8 @@ Do you want to continue?</value>
   <data name="MenuItemNotes" xml:space="preserve">
     <value>Notes</value>
   </data>
-  <data name="MenuItemResetWindow" xml:space="preserve">
-    <value>Reset window</value>
+  <data name="MenuItemResetWindows" xml:space="preserve">
+    <value>Reset windows</value>
   </data>
   <data name="MenuItemTools" xml:space="preserve">
     <value>Tools</value>
@@ -1045,13 +1042,28 @@ Do you want to continue?</value>
   <data name="HeaderToolExport" xml:space="preserve">
     <value>Export</value>
   </data>
-  <data name="HeaderToolMetadata" xml:space="preserve">
-    <value>Metadata</value>
+  <data name="HeaderToolTitleMetadata" xml:space="preserve">
+    <value>Title Data</value>
   </data>
   <data name="HeaderToolTitleList" xml:space="preserve">
     <value>Title List</value>
   </data>
   <data name="TextStart" xml:space="preserve">
     <value>Start</value>
+  </data>
+  <data name="HeaderToolSubmissionMetadata" xml:space="preserve">
+    <value>Submission Data</value>
+  </data>
+  <data name="ToolSubmissionMetadataDetail" xml:space="preserve">
+    <value>This operation verfies that all submission documents are present on disk and updates meta data that is stored in the database regarding each file, such as the last updated date/time.</value>
+  </data>
+  <data name="ToolTipResetWindows" xml:space="preserve">
+    <value>Resets all application windows to their default sizes</value>
+  </data>
+  <data name="TextAddedUpdated" xml:space="preserve">
+    <value>Added / Updated</value>
+  </data>
+  <data name="TextRemoved" xml:space="preserve">
+    <value>Removed</value>
   </data>
 </root>
