Implement title version rename
The title version rename functionality allows the files that belong to a title to renamed according to the the name of the title, its version, revision, and language

--- a/src/Panama/Resources/Strings.resx
+++ b/src/Panama/Resources/Strings.resx
@@ -1152,4 +1152,7 @@ Do you want to continue?</value>
   <data name="WindowTitleSelectMessagesGeneric" xml:space="preserve">
     <value>Select messages</value>
   </data>
+  <data name="TextRename" xml:space="preserve">
+    <value>Rename</value>
+  </data>
 </root>
